GNOME Bugzilla – Bug 703369
Fix build warnings about string format
Last modified: 2013-07-03 13:55:59 UTC
Created attachment 248118 [details] [review] Fix build warnings about string format Fixes warning about the string format specifiers not matching the type of the arguments. /home/prahal/Projects/Devel/Gnome/jhbuild/gnome/totem/src/backend/bacon-video-widget.c: In function 'bvw_download_buffering_done': /home/prahal/Projects/Devel/Gnome/jhbuild/gnome/totem/src/backend/bacon-video-widget.c:1929:5: warning: format '%lld' expects argument of type 'long long int', but argument 8 has type 'gint64' [-Wformat=] GST_DEBUG ("Buffering left: %lld * %f = %lld < %lld", ^ /home/prahal/Projects/Devel/Gnome/jhbuild/gnome/totem/src/backend/bacon-video-widget.c:1929:5: warning: format '%lld' expects argument of type 'long long int', but argument 10 has type 'double' [-Wformat=] /home/prahal/Projects/Devel/Gnome/jhbuild/gnome/totem/src/backend/bacon-video-widget.c:1929:5: warning: format '%lld' expects argument of type 'long long int', but argument 11 has type 'gint64' [-Wformat=]
Review of attachment 248118 [details] [review]: ::: src/backend/bacon-video-widget.c @@ +1930,1 @@ bvw->priv->buffering_left, BUFFERING_LEFT_RATIO, buffering_left is a gint64, so you should use that as the format, not guint64.
Created attachment 248174 [details] [review] Fix build warnings about string format (v2) thanks. Fixed the gint64 vs guint6 mess up in the previous patch.