backend: Fix build warnings about string format

Fixes warning about the string format specifiers  not matching
the type of the arguments.

src/backend/bacon-video-widget.c: In function 'bvw_download_buffering_done':
src/backend/bacon-video-widget.c:1929:5: warning: format '%lld' expects argument of type 'long long int', but argument 8 has type 'gint64' [-Wformat=]
     GST_DEBUG ("Buffering left: %lld * %f = %lld < %lld",
     ^
src/backend/bacon-video-widget.c:1929:5: warning: format '%lld' expects argument of type 'long long int', but argument 10 has type 'double' [-Wformat=]
src/backend/bacon-video-widget.c:1929:5: warning: format '%lld' expects argument of type 'long long int', but argument 11 has type 'gint64' [-Wformat=]

https://bugzilla.gnome.org/show_bug.cgi?id=703369